[package]
edition = "2024"
name = "esp-asteroids"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp-asteroids"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32"] }
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
fugit = "0.3"
heapless = "0.9"
esp-storage = { version = "0.8.1", features = ["esp32"] }
embedded-storage = "0.3"

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

critical-section = "1.2.0"

[features]
default = []

[profile.dev]
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = 2

[profile.release]
# LLVM can perform better optimizations using a single thread
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.release.package.esp-storage]
opt-level = 2
